# Myproject

./: CMakeLists.txt  EURUSD_daily_1000days.csv  INDICATORS_GUIDE.md  QUICK_START.md  README.md  ai_training.py  api_examples.md  custom_indicators.py  dl_model_checkpoint.h5  dl_model_v1.h5  dl_model_v1.keras  feature_columns_v1.json  forme.txt  gemini_analysis.txt  gemini_trading_strategy.txt  index.html  market_predictor_model_v1.pkl  model_history.json  requirements.txt  scaler_v1.pkl  script.js  script.js.bak  start.py.backup  style.css  web_server.py  Идея.txt
